# 3dgs-mcmc

./: .clang-format  .gitignore  .gitmodules  pyproject.toml  train.py
arguments/: __init__.py
gaussian_renderer/: __init__.py  network_gui.py
scene/: __init__.py  cameras.py  colmap_loader.py  dataset_readers.py  gaussian_model.py
utils/: camera_utils.py  general_utils.py  loss_utils.py  reloc_utils.py  system_utils.py
